--- a/style.css
+++ b/style.css
@@ -94,27 +94,51 @@ ul {
   text-decoration: none;
   color: black;
 }
-.lever-pro {
+.collection-grid-container {
+  display: grid;
+  grid-template-columns: 770px 520px;
+  grid-template-areas:
+    "a b"
+    "a c";
+  gap: 20px;
+  margin-bottom: 100px;
+  grid-template-rows: 300px 300px;
+}
+.collection-grid-smalla {
+  position: absolute;
+  top: 1625px;
+  right: 402px;
+  z-index: 100;
+}
+
+.collection-smaill-shopp {
+  text-decoration: none;
+  color: black;
+}
+
+.collection-grid-large {
+  position: absolute;
+}
+.collection-grid-large {
   position: relative;
-  grid-column-gap: 10px;
+  bottom: 338px;
+  left: 400px;
+  width: 319px;
+}
+.collection-shop {
+  text-decoration: none;
+  color: black;
+}
+.collection-title {
+  font-size: 40px;
 }
 .lever-text {
   position: absolute;
+  top: 68px;
+  left: 54px;
+  width: 176px;
   z-index: 100;
 }
-.lever-img {
-  width: 300px;
-}
-.lever {
-  display: grid;
-  grid-template-columns: 2fr 1fr;
-  grid-template-rows: 200px;
-}
-.lever:nth-child(1) {
-  grid-area: 1/3;
-  grid-row: 1/3;
-}
-
 .footer {
   display: flex;
   text-decoration: none;
@@ -131,4 +155,6 @@ ul {
   display: block;
   margin-bottom: 10px;
   margin-top: 10px;
+}
+.collection-grid-small {
 }
